--- a/examples/azure-staticwebapp/package.json
+++ b/examples/azure-staticwebapp/package.json
@@ -13,33 +13,37 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^2.12.1",
-    "@remix-run/node": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
-    "@remix-run/serve": "^2.12.1",
+    "@remix-run/css-bundle": "^2.15.2",
+    "@remix-run/node": "^2.15.2",
+    "@remix-run/react": "^2.15.2",
+    "@remix-run/serve": "^2.15.2",
     "@scandinavianairlines/remix-azure-functions": "^1.0.3",
-    "isbot": "^5.1.17",
+    "isbot": "^5.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^2.0.1",
-    "@remix-run/dev": "^2.12.1",
-    "@remix-run/eslint-config": "^2.12.1",
+    "@azure/static-web-apps-cli": "^2.0.2",
+    "@remix-run/dev": "^2.15.2",
+    "@remix-run/eslint-config": "^2.15.2",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "azure-functions-core-tools": "^4.0.6280",
-    "eslint": "^8.57.0",
+    "azure-functions-core-tools": "^4.0.6610",
+    "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "resolutions": {
-    "axios": ">=0.28.0",
+    "axios": ">=1.7.4",
     "braces": ">=3.0.3",
+    "cookie": ">=0.7.0",
+    "cross-spawn": ">=7.0.5",
     "got": ">12.1.0",
+    "nanoid": ">=3.3.8",
+    "path-to-regexp": ">=0.1.12",
     "tar": ">=6.2.1",
     "undici": ">=5.28.4",
     "ws": ">= 7.5.10"
