--- a/package.json
+++ b/package.json
@@ -48,44 +48,49 @@
     }
   },
   "devDependencies": {
-    "@azure/functions": "^4.5.1",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@commitlint/cz-commitlint": "^19.4.0",
-    "@eslint/eslintrc": "^3.1.0",
-    "@remix-run/node": "^2.12.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@azure/functions": "^4.6.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/cz-commitlint": "^19.6.1",
+    "@eslint/eslintrc": "^3.2.0",
+    "@remix-run/node": "^2.15.2",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@tsconfig/node-lts": "^20.1.3",
-    "@vitest/coverage-v8": "^2.1.1",
-    "commitizen": "^4.3.0",
-    "eslint": "^9.11.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "commitizen": "^4.3.1",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-import-x": "^4.3.0",
-    "eslint-plugin-jsdoc": "^50.2.5",
-    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-jsdoc": "^50.6.1",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "eslint-plugin-unicorn": "^55.0.0",
+    "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-vitest": "^0.5.4",
-    "husky": "^9.1.6",
-    "inquirer": "^11.0.2",
-    "lint-staged": "^15.2.10",
-    "neostandard": "^0.11.6",
+    "husky": "^9.1.7",
+    "inquirer": "^9.3.7",
+    "lint-staged": "^15.3.0",
+    "neostandard": "^0.12.0",
     "pinst": "^3.0.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "ramda": "^0.30.1",
-    "typescript": "^5.5.4",
-    "vitest": "^2.1.1"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 18"
   },
   "resolutions": {
+    "@eslint/plugin-kit": ">=0.2.3",
     "axios": ">=0.28.0",
-    "undici": ">=5.28.4",
-    "tar": ">=6.2.1"
+    "cookie": ">=0.7.0",
+    "cross-spawn": ">=7.0.5",
+    "nanoid": ">=3.3.8",
+    "path-to-regexp": ">=0.1.12",
+    "tar": ">=6.2.1",
+    "undici": ">=5.28.4"
   },
   "packageManager": "yarn@4.4.1"
 }
