chore(security): bump dependencies to close security issues in server

--- a/examples/azure-staticwebapp/server/package.json
+++ b/examples/azure-staticwebapp/server/package.json
@@ -8,27 +8,32 @@
     "dev": "func start --cors-credentials --port 3030"
   },
   "dependencies": {
-    "@azure/functions": "^4.5.0",
-    "@remix-run/css-bundle": "^2.10.2",
-    "@remix-run/node": "^2.10.2",
-    "@remix-run/react": "^2.10.2",
-    "@remix-run/serve": "^2.10.2",
+    "@azure/functions": "^4.6.0",
+    "@remix-run/css-bundle": "^2.15.2",
+    "@remix-run/node": "^2.15.2",
+    "@remix-run/react": "^2.15.2",
+    "@remix-run/serve": "^2.15.2",
     "@scandinavianairlines/remix-azure-functions": "^1.0.3",
-    "isbot": "^4.4.0",
+    "isbot": "^5.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.10",
-    "azure-functions-core-tools": "^4.0.5907"
+    "@azure/static-web-apps-cli": "^2.0.2",
+    "azure-functions-core-tools": "^4.0.6610"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "resolutions": {
-    "axios": ">=0.28.0",
+    "axios": ">=1.7.4",
     "braces": ">=3.0.3",
+    "cookie": ">=0.7.0",
+    "cross-spawn": ">=7.0.5",
     "got": ">12.1.0",
+    "nanoid": ">=3.3.8",
+    "path-to-regexp": ">=0.1.12",
+    "rollup": ">=3.29.5",
     "tar": ">=6.2.1",
     "undici": ">=5.28.4",
     "ws": ">= 7.5.10"
